# routes/user.js
@@ -9,6 +9,4 @@ router.get('/', userController.getUsers);
 
 router.get('/:id', userController.getUser);
 
-// router.post('/', userController.createNewUser);
-
 module.exports = router;
